# diffusion-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: bmp.cpp  bmp.h  diffusion.cpp  diffusion.cu  diffusion.cuh  diffusion.h  main.cpp
